# wwsupdb

./: .gitignore  README.md  chebro_parse.py  chebro_put_in_egress.txt  check_match_sources.py  check_osm_import.js  check_osm_import.sh  ckfiumi_import.py  ckfiumi_scrap.py  ckfiumi_scrap.sh  compute_bounding_boxes.py  config.py  count_osm_overlaps.py  dc_import.py  dc_scrap.py  dc_scrap.sh  eauxvives_org-scrap.py  evo_import.py  evo_scrap.py  evo_scrap.sh  flask_server.py  geo_utils.py  json2mongo.py  len_on_river.py  manual_matches.py  match_evo_osm.py  match_sources.py  match_sources2.py  match_sources_exact.py  match_sources_fuzzy.py  merge_analysis.txt  merge_paths.py  osm_gdal_import.py  osm_getrivers.py  osm_merge_paths.py  osm_parse.sh  pbf_parse.py  polygons.py  prettyfy.py  remove_loops.py  (+12 more)
extractwwdata/: Cargo.toml
extractwwdata/src/: main.rs
osmpbfparser2/: Cargo.toml
osmpbfparser2/src/: main.rs  testbulk.rs
pbfparser/: Cargo.toml
pbfparser/src/: main.rs
static/javascript/: prepare.js  preparegeoportal.js  preparegmaps.js  utils.js
static/styles/: map.css
templates/: base.html  map.html
